; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_si_intf.c_flush_messages.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_si_intf.c_flush_messages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smi_info = type { i32 }

@SI_SM_IDLE = common dso_local global i32 0, align 4
@SI_SHORT_TIMEOUT_USEC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @flush_messages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_messages(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.smi_info*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.smi_info*
  store %struct.smi_info* %6, %struct.smi_info** %3, align 8
  %7 = load %struct.smi_info*, %struct.smi_info** %3, align 8
  %8 = call i32 @smi_event_handler(%struct.smi_info* %7, i32 0)
  store i32 %8, i32* %4, align 4
  br label %9

9:                                                ; preds = %13, %1
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* @SI_SM_IDLE, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %9
  %14 = load i32, i32* @SI_SHORT_TIMEOUT_USEC, align 4
  %15 = call i32 @udelay(i32 %14)
  %16 = load %struct.smi_info*, %struct.smi_info** %3, align 8
  %17 = load i32, i32* @SI_SHORT_TIMEOUT_USEC, align 4
  %18 = call i32 @smi_event_handler(%struct.smi_info* %16, i32 %17)
  store i32 %18, i32* %4, align 4
  br label %9

19:                                               ; preds = %9
  ret void
}

declare dso_local i32 @smi_event_handler(%struct.smi_info*, i32) #1

declare dso_local i32 @udelay(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
